# mkdocs-excalidraw

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  run.sh  sitemap.xml
.github/: dependabot.yaml
.github/workflows/: branches.yaml  release.yaml
docs/: index.md
docs/drawings/: big.excalidraw  frame.excalidraw  test.excalidraw
excalidraw-renderer/: esbuild.config.js  package-lock.json  package.json
excalidraw-renderer/src/: excalidraw-renderer.js  index.js  renderer.js  theme.js  utils.js
mkdocs_excalidraw/: __main__.py  component.js  plugin.py
tests/: plugin_test.py
tests/templates/: index.html
