[project]
name = "mkdocs-excalidraw"
version = "0.4.1"
description = "Excalidraw drawings in mkdocs"
authors = [
    {name = "qdeli"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)"
]

[project.urls]
Homepage = "https://github.com/qdeli187/mkdocs-excalidraw"
Issues = "https://github.com/qdeli187/mkdocs-excalidraw/issues"

[tool.poetry.plugins."mkdocs.plugins"]
excalidraw = "mkdocs_excalidraw.plugin:ExcalidrawPlugin"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.22"
mkdocs-glightbox = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

