[project]
name = "mkdocs-excalidraw"
version = "0.5.0"
description = "Excalidraw drawings in mkdocs"
authors = [
    {name = "qdeli"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)"
]

[tool.poetry]
include = [
    { path = "mkdocs_excalidraw/assets/excalidraw-renderer.bundle.js", format = ["sdist", "wheel"] }
]


[project.urls]
Homepage = "https://github.com/qdeli187/mkdocs-excalidraw"
Documentation = "https://qdeli187.github.io/mkdocs-excalidraw/"
Repository = "https://github.com/qdeli187/mkdocs-excalidraw"
Issues = "https://github.com/qdeli187/mkdocs-excalidraw/issues"
Changelog = "https://github.com/qdeli187/mkdocs-excalidraw/releases"

[tool.poetry.plugins."mkdocs.plugins"]
excalidraw = "mkdocs_excalidraw.plugin:ExcalidrawPlugin"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocs-glightbox = "^0.5.2"
mkdocs-include-markdown-plugin = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

